# varr-numerics

./: CMakeLists.txt  README.md  RELEASE.md  make.sh  varr-numerics.pc  varr-numerics.pc.in  varr-numerics.spec  varr-numerics.spec.in
debian/: changelog  control  copyright  varr-numerics-dev.install
src/: varr_3_over_4.c  varr_atan.c  varr_cos.c  varr_exp.c  varr_extimer.c  varr_general_bound_linbuf.c  varr_log.c  varr_phasor.c  varr_sin.c  varr_sixth_root.c
test/: entry.c  sequence_comparison.c  sequence_comparison.h  sequence_generation.c  sequence_generation.h  test_results.c  timings.h  timings_complex.c  timings_double.c  varr_3_over_4.test.c  varr_atan.test.c  varr_exp.test.c  varr_general_bound_linbuf.test.c  varr_log.test.c  varr_phasor.test.c  varr_sequence_analysis.test.c  varr_sin.test.c  varr_sixthroot.test.c  varr_test.h  varr_utils.c  varr_utils.h
varr/: varr.h  varr_3_over_4.h  varr_all.h  varr_atan.h  varr_cos.h  varr_exp.h  varr_extimer.h  varr_floor_log2.h  varr_general_bound_linbuf.h  varr_internal.h  varr_log.h  varr_phasor.h  varr_sin.h  varr_sixth_root.h
